<?xml version="1.0" encoding="utf-8"?><!--
  ~ Warden
  ~ Copyright (C) 2020, Rahul Kumar Patel <whyorean@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group0">
        <item
            android:id="@+id/action_app_usage"
            android:icon="@drawable/ic_menu_monitor"
            android:title="@string/menu_app_usage" />
        <item
            android:id="@+id/action_lab"
            android:icon="@drawable/ic_menu_lab"
            android:title="@string/menu_lab" />
        <item
            android:id="@+id/action_hidden"
            android:icon="@drawable/ic_menu_hidden"
            android:title="@string/menu_hidden_apps" />
    </group>

    <group android:id="@+id/group1">
        <item
            android:id="@+id/action_trackers"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_trackers" />
        <item
            android:id="@+id/action_loggers"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_loggers" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/action_setting"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
    </group>
</menu>