<?xml version="1.0" encoding="utf-8"?>

<!--
  ~  Aurora Wallpapers
  ~  Copyright (C) 2020, Rahul Kumar Patel <auroraoss.dev@gmail.com>
  ~
  ~  Aurora Wallpapers is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 2 of the License, or
  ~  (at your option) any later version.
  ~
  ~  Aurora Wallpapers is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with Aurora Wallpapers.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        style="@style/AuroraTextStyle.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/action_filter"
        android:textColor="?android:attr/colorAccent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_normal"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:targetApi="o">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AuroraTextStyle.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_normal"
                android:text="@string/filter_category_location" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:paddingStart="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_normal"
                app:chipSpacingHorizontal="@dimen/margin_small"
                app:chipSpacingVertical="@dimen/margin_normal"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_system"
                    style="@style/Widget.Aurora.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_system" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_user"
                    style="@style/Widget.Aurora.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_user" />
            </com.google.android.material.chip.ChipGroup>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AuroraTextStyle.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_normal"
                android:text="@string/filter_category_advance" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:paddingStart="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_normal"
                app:chipSpacingHorizontal="@dimen/margin_small"
                app:chipSpacingVertical="@dimen/margin_normal">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_disabled"
                    style="@style/Widget.Aurora.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_disabled" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_debugging"
                    style="@style/Widget.Aurora.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_debugging" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_stopped"
                    style="@style/Widget.Aurora.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_stopped" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_suspended"
                    style="@style/Widget.Aurora.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_suspended" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_large_heap"
                    style="@style/Widget.Aurora.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_large_heap" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_launchable"
                    style="@style/Widget.Aurora.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_launchable" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_positive"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_apply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_negative"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/colorTransparent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_negative"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_close"
            android:textColor="@color/colorRed"
            app:layout_constraintEnd_toStartOf="@id/btn_positive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/colorTransparent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>