<?xml version="1.0" encoding="utf-8"?><!--
  ~ Warden
  ~ Copyright (C) 2020, Rahul Kumar Patel <whyorean@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  ~
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_scanner">

    <fragment
        android:id="@+id/navigation_apps"
        android:name="com.aurora.warden.ui.fragments.AppsFragment"
        android:label="@string/menu_apps"
        tools:layout="@layout/fragment_apps" />

    <fragment
        android:id="@+id/navigation_scanner"
        android:name="com.aurora.warden.ui.fragments.ScannerFragment"
        android:label="@string/menu_warden"
        tools:layout="@layout/fragment_scanner" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.aurora.warden.ui.fragments.StatisticsFragment"
        android:label="@string/menu_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.aurora.warden.ui.fragments.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />
</navigation>