<?xml version="1.0" encoding="utf-8"?><!--
  ~ Warden
  ~ Copyright (C) 2020, Rahul Kumar Patel <whyorean@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="256dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/action_nuke_it"
            android:textAppearance="@style/TextAppearance.Aurora.Title"
            android:textColor="?android:attr/colorAccent"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/string_nuke_title"
            android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_normal"
            android:padding="@dimen/padding_medium"
            android:text="@string/string_nuke_desc"
            android:textAppearance="@style/TextAppearance.Aurora.Line1" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_nuke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@string/string_nuke_export" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/margin_normal"
        android:paddingEnd="@dimen/margin_normal"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_negative"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginEnd="@dimen/margin_xsmall"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/action_later" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_positive"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/margin_xsmall"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/action_proceed" />
    </LinearLayout>
</LinearLayout>